# python-demo-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  factory.py  logging.py  logging_filters.py
app/cli/: generate_descriptor.py  generate_jwt.py
app/domain/: app_instance.py  entities.py
app/integrations/: http_client.py  json_api.py  vendor_api.py
app/repositories/: memory.py  models.py  sqlite.py
app/security/: crypto.py  jwt_tools.py
app/services/: buttons.py  common.py  descriptor.py  entry.py  user_context.py  utils.py  vendor_endpoint.py
app/web/: routes.py  session.py
static/assets/entry/: iframe.css  iframe.js  popup.css  popup.js  widget.css  widget.js
templates/entry/: iframe.html  popup.html  widget.html
tests/: conftest.py  test_config.py  test_descriptor.py  test_flask_routes.py  test_http_client.py  test_logging_filters.py  test_sqlite_session_repository.py  test_user_context.py  test_vendor_endpoint_service.py
