[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-demo-app"
version = "1.0.0"
description = "Python/Flask demo marketplace app for MoySklad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "PyJWT>=2.8,<3.0",
    "cryptography>=42.0,<47.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
